# llm-benchmark

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py  schemas.py
src/routers/: benchmarks.py
src/services/: anthropic_client.py  benchmark_runner.py
tests/: test_benchmarks.py
